--- a/src/components/ReviewForm/ReviewForm.scss
+++ b/src/components/ReviewForm/ReviewForm.scss
@@ -3,12 +3,32 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  background-image: linear-gradient(to top, #f3e7e9 0%, #e3eeff 99%, #e3eeff 100%);
 
   .reviewTitle {
+    font-size: 40px;
     text-align: center;
-    font-family: "Source Code Pro", monospace;
-    margin-top: 2rem;
+    margin: 2rem;
+      font-weight: bold;
+      color: transparent;
+      -webkit-text-stroke: 1px white;
+      position: relative;
+      cursor: pointer;
+
+      &:hover::after {
+        color: rgb(197, 181, 247);
+        animation: moveText 1s ease-in-out forwards;
+      }
+  }
+
+  .reviewTitle::after {
+    content: "Give Your Valuable Review";
+    position: absolute;
+    top: 0;
+    left: 0;
+    overflow: hidden;
+    white-space: nowrap;
+    // color: pink;
+    width: 0;
   }
   .uploadImg {
     margin: 2rem 0;
@@ -23,19 +43,23 @@
     display: flex;
     flex-direction: column;
     padding: 40px;
-  }
-  // .textfield-label{
-  //   color: white !important;
-  // }
 
-  
-  // .css-1x51dt5-MuiInputBase-input-MuiInput-input{
-  //   color: white;
-  // }
+    .text{
+      border-bottom: 1px solid #8a8a8b;
+    }
+    .textfield-label{
+      color: white !important;
+    }
+    .css-1x51dt5-MuiInputBase-input-MuiInput-input{
+      color: white;
+    }
+  }
 }
 
-// @media only screen and (max-width: 600px) {
-//     .right{
-//         width: 60vw;
-//     }
-//   }
+@media only screen and (max-width: 600px) {
+  .reviewForm {
+    .reviewTitle{
+      font-size: 22px;
+    }
+  }
+  }
